--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -3,6 +3,8 @@ name: Post welcome comment
 on:
   pull_request:
     types: [opened]
+  workflow_dispatch:
+
 
 permissions:
   pull-requests: write
